# gradepath

./: .gitignore  README.md  main.py  pyproject.toml  test_1.py  test_storage.py
.data/: gradepath_memory.db
.data/chroma_db/: chroma.sqlite3
app/: main.py
app/api/v1/endpoints/: ingest.py
ingestion/: processor.py
services/: calender.py
storage/: __init__.py  config.py  memory.py  vector.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_📥_Ingestion.py  1_📥_Ingestion_and_materials.py  2_📊_Dashboard_and_grades.py  2_📊_Overview.py  3_💬_Chat_and_planner.py  3_📅_Schedule.py  4_📚_Materials.py  4_🧱_System_diagrams.py  5_⚙️_Settings_and_connections.py  5_💬_Chat.py  6_⚙️_Settings.py
tools/: mcp_calendar.py
