[project]
name = "gradepath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "uvicorn[standard]>=0.40.0",
]
